{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 209,
  "lineage": "bde723cf-9b0b-8406-8353-681f97233b63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:security-group/sg-082999e5afa8b317b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082999e5afa8b317b",
            "ingress": [
              {
                "cidr_blocks": [
                  "14.238.24.130/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-bastion-sg",
            "name_prefix": "",
            "owner_id": "861199565084",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.http.myip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:security-group/sg-096ebb3630e5b45b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096ebb3630e5b45b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082999e5afa8b317b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-private-sg",
            "name_prefix": "",
            "owner_id": "861199565084",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "data.http.myip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c687e8f5c4e54af5",
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:instance/i-07e38a1e5d624a127",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e38a1e5d624a127",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20260127082439168200000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0adccfb5d807293bb",
            "private_dns": "ip-10-0-1-182.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_ip": "47.128.81.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0049fbec49dd4803d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0889fc19c137f59a9",
            "tags": {
              "Name": "lab-bastion"
            },
            "tags_all": {
              "Name": "lab-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082999e5afa8b317b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.this",
            "aws_security_group.bastion",
            "data.http.myip",
            "module.ec2_bastion.data.aws_ami.ubuntu_2204",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c687e8f5c4e54af5",
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:instance/i-081bbb8a29754d7f7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081bbb8a29754d7f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20260127082439168200000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ef4c18c134b5dbc",
            "private_dns": "ip-10-0-101-226.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a9cce48fdfef744",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018ed3aff1437371e",
            "tags": {
              "Name": "lab-private"
            },
            "tags_all": {
              "Name": "lab-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096ebb3630e5b45b4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.this",
            "aws_security_group.bastion",
            "aws_security_group.private",
            "data.http.myip",
            "module.ec2_private.data.aws_ami.ubuntu_2204",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dc533af3c94d10d",
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:elastic-ip/eipalloc-09dc533af3c94d10d",
            "domain": "vpc",
            "id": "eipalloc-09dc533af3c94d10d",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-74-229-252.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.229.252",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-nat-eip",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-nat-eip",
              "Project": "lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:internet-gateway/igw-0a02342525cfb843a",
            "id": "igw-0a02342525cfb843a",
            "owner_id": "861199565084",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-igw",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-igw",
              "Project": "lab"
            },
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dc533af3c94d10d",
            "association_id": "eipassoc-0f07fa4185ddf2640",
            "connectivity_type": "public",
            "id": "nat-0db4458dea77d6da7",
            "network_interface_id": "eni-050056cfc282c84cd",
            "private_ip": "10.0.1.207",
            "public_ip": "52.74.229.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0889fc19c137f59a9",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-nat",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-nat",
              "Project": "lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:route-table/rtb-0c1bbd749b614123b",
            "id": "rtb-0c1bbd749b614123b",
            "owner_id": "861199565084",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db4458dea77d6da7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-rt",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-rt",
              "Project": "lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:route-table/rtb-049ceba175cbafc36",
            "id": "rtb-049ceba175cbafc36",
            "owner_id": "861199565084",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a02342525cfb843a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-public-rt",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-public-rt",
              "Project": "lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098b584167673244e",
            "route_table_id": "rtb-0c1bbd749b614123b",
            "subnet_id": "subnet-018ed3aff1437371e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109610feb7567f2d",
            "route_table_id": "rtb-0c1bbd749b614123b",
            "subnet_id": "subnet-0d5a310acaee2c10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e3dad56856ef7c",
            "route_table_id": "rtb-049ceba175cbafc36",
            "subnet_id": "subnet-0889fc19c137f59a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007819cf6d4472398",
            "route_table_id": "rtb-049ceba175cbafc36",
            "subnet_id": "subnet-023d1dae09d22d135"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:security-group/sg-0c2bc99d2690b2e35",
            "description": "Allow SSH to bastion only from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2bc99d2690b2e35",
            "ingress": [
              {
                "cidr_blocks": [
                  "14.238.24.130/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-bastion-sg-only-my-ip",
            "name_prefix": "",
            "owner_id": "861199565084",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-bastion-sg",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-bastion-sg",
              "Project": "lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:security-group/sg-0f54d2ad26db29f48",
            "description": "Allow SSH to private EC2 only from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f54d2ad26db29f48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2bc99d2690b2e35"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "861199565084",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-ec2-sg",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-ec2-sg",
              "Project": "lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:subnet/subnet-018ed3aff1437371e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ed3aff1437371e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861199565084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-1",
              "Project": "lab",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-1",
              "Project": "lab",
              "Tier": "private"
            },
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:subnet/subnet-0d5a310acaee2c10e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5a310acaee2c10e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861199565084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-2",
              "Project": "lab",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-private-2",
              "Project": "lab",
              "Tier": "private"
            },
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:subnet/subnet-0889fc19c137f59a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889fc19c137f59a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861199565084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-public-1",
              "Project": "lab",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-public-1",
              "Project": "lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:subnet/subnet-023d1dae09d22d135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023d1dae09d22d135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861199565084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-public-2",
              "Project": "lab",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-public-2",
              "Project": "lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cc67949a3d4d8356"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:861199565084:vpc/vpc-0cc67949a3d4d8356",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c3967f5af111703",
            "default_route_table_id": "rtb-0bd3daaa2c542abc6",
            "default_security_group_id": "sg-0778a3e4fdae22920",
            "dhcp_options_id": "dopt-0d1ccf130fa332e2d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc67949a3d4d8356",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd3daaa2c542abc6",
            "owner_id": "861199565084",
            "tags": {
              "ManagedBy": "Thanh",
              "Name": "lab-vpc",
              "Project": "lab"
            },
            "tags_all": {
              "ManagedBy": "Thanh",
              "Name": "lab-vpc",
              "Project": "lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}